fixes error div not showing bug

--- a/src/app/components/checkout-form/checkout-form.component.css
+++ b/src/app/components/checkout-form/checkout-form.component.css
@@ -47,3 +47,7 @@ label {
     border-top: none;
     font-weight: bold;
 }
+
+.invalid-feedback {
+    display: block;
+  }
